--- a/Web.config
+++ b/Web.config
@@ -1,10 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="cadenaconexion" connectionString="Data Source=LAPTOP-TEUDK6GS\SQLEXPRESS;Initial Catalog=CotPC;Integrated Security=True;" />
+    <add name="CotPCConnectionString" connectionString="Data Source=LAPTOP-TEUDK6GS\SQLEXPRESS;Initial Catalog=CotPC;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
