--- a/CotPc.csproj
+++ b/CotPc.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Comenzar.aspx" />
+    <Content Include="css\bootstrap-flex.css" />
     <Content Include="css\bootstrap-grid.css" />
     <Content Include="css\bootstrap-grid.min.css" />
     <Content Include="css\bootstrap-reboot.css" />
@@ -81,17 +82,27 @@
     <Content Include="css\owl.carousel.css" />
     <Content Include="css\owl.theme.default.min.css" />
     <Content Include="css\tooplate-style.css" />
+    <Content Include="EditarElementos.aspx" />
     <Content Include="HomePage.aspx" />
     <Content Include="Iconos\cerrar.png" />
     <Content Include="Iconos\cerrarSesion.png" />
     <Content Include="Iconos\Retornar.png" />
     <Content Include="Images\arma_amd.svg" />
     <Content Include="Images\arma_intel.svg" />
+    <Content Include="Images\Disenio.jpg" />
+    <Content Include="Images\gamerxd.gif" />
     <Content Include="Images\home-bg.jpg" />
     <Content Include="Images\1.jpg" />
     <Content Include="Images\2.jpg" />
     <Content Include="Images\3.jpg" />
     <Content Include="Images\4.jpg" />
+    <Content Include="Images\loading.gif" />
+    <Content Include="Images\Nulo1.jpg" />
+    <Content Include="Images\Oficina.png" />
+    <Content Include="Images\Pc1.jpg" />
+    <Content Include="Images\pc2.jpg" />
+    <Content Include="Images\pc3.jpg" />
+    <Content Include="Images\Pc4.jpg" />
     <Content Include="Inserciones_Solo_Administradores.aspx" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
@@ -99,6 +110,9 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\npm.js" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
+    <Content Include="js\smooth-scroll.min.js" />
+    <Content Include="js\SoloEnteros.js" />
+    <Content Include="NuevoUsuario.aspx" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
     <Content Include="Scripts\jquery-3.5.1.slim.js" />
@@ -113,6 +127,13 @@
     <Compile Include="Comenzar.aspx.designer.cs">
       <DependentUpon>Comenzar.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EditarElementos.aspx.cs">
+      <DependentUpon>EditarElementos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EditarElementos.aspx.designer.cs">
+      <DependentUpon>EditarElementos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="HomePage.aspx.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -126,6 +147,13 @@
     </Compile>
     <Compile Include="Inserciones_Solo_Administradores.aspx.designer.cs">
       <DependentUpon>Inserciones_Solo_Administradores.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NuevoUsuario.aspx.cs">
+      <DependentUpon>NuevoUsuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NuevoUsuario.aspx.designer.cs">
+      <DependentUpon>NuevoUsuario.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
