--- a/bin/CotPc.dll.config
+++ b/bin/CotPc.dll.config
@@ -12,7 +12,7 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="30480"/>
   </system.web>
   <system.codedom>
     <compilers>
